--- a/styleCountdown.css
+++ b/styleCountdown.css
@@ -53,7 +53,7 @@ h1{
   width: auto;
   text-align: center;
   margin-top: 5px;
-  color: #ddd;
+  color: #4682B4;
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 2px;
