--- a/styleCountdown.css
+++ b/styleCountdown.css
@@ -30,7 +30,7 @@ h1{
 
 }
 #clock span:nth-child(1){
-  background: #708090;
+  background: #5F9EA0;
 }
 #clock span:nth-child(2){
   background: #708090;
