--- a/css/960.css
+++ b/css/960.css
@@ -498,6 +498,9 @@ body {
 .container_16 .push_15 {
   left: 900px;
 }
+.container_16 .push_15 {
+  background-image:"css/images/slider/slide3.jpg";
+}
 
 /* `Pull Space >> Global
 ----------------------------------------------------------------------------------------------------*/
