color of units changed

--- a/styleCountdown.css
+++ b/styleCountdown.css
@@ -55,7 +55,7 @@ h1{
   width: auto;
   text-align: center;
   margin-top: 5px;
-  color: #4682B4;
+  color: #6495ED;
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 2px;
