--- a/flipclock.css
+++ b/flipclock.css
@@ -1,5 +1,12 @@
 /* Get the bourbon mixin from http://bourbon.io */
 /* Reset */
+.units li{
+    display: inline;
+    text-transform: uppercase;
+    font-size: 140%;
+    
+}
+
 .flip-clock-wrapper * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
