--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,7 @@ a:hover, a:focus, a:active {
   left: 0;
   right: 0;
   z-index: 10;
+  background-color: transparent;
   
 }
 
@@ -252,6 +253,7 @@ a:hover, a:focus, a:active {
     background: white;
     -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
+    
   }
 }
 
