--- a/css/style.css
+++ b/css/style.css
@@ -1032,6 +1032,10 @@ a:hover, a:focus, a:active {
 
 .probootstrap-section.probootstrap-section-colored {
   background-image:url("../images/news/careerday.jpg");
+  background-size: 100%;
+  background-attachment: fixed;
+  
+  
 }
 
 .probootstrap-section.probootstrap-section-colored .section-heading h2 {
