title font weight changed

--- a/News/css/style.css
+++ b/News/css/style.css
@@ -432,6 +432,7 @@ textarea.input {
 	color:#FFF;
 	background-color:#222;
 	padding:0px 15px;
+	font-weight: 500;
 }
 
 .section-title .title:after {
