--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,7 @@ a:hover, a:focus, a:active {
   padding-right: 0;
   margin-left: 15px;
   margin-right: 15px;
+  color: #49d192 !important;
 }
 
 @media screen and (max-width: 768px) {
