--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
-/*!==============================
- * Theme Name: Enlight
- * Theme URL: https://probootstrap.com/enlight-free-education-responsive-bootstrap-website-template
- * Author: ProBootstrap.com
- * Author URL: https://probootstrap.com
- * License: Released for free under the Creative Commons Attribution 3.0 license (probootstrap.com/license)
- */
+
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?1z9v6x");
@@ -261,25 +255,32 @@ a:hover, a:focus, a:active {
   box-shadow: none;
   border-radius: 0px;
   margin-bottom: 0px;
-  background: #ffffff;
+  background: transparent;
   -webkit-transition: .3s all;
   transition: .3s all;
-  height: 80px;
+  position: absolute;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  right: 0;
+  
+  /*height: 80px;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 3;
   background-color: transparent;
-  
+  */
 }
 
 @media screen and (max-width: 768px) {
   .probootstrap-navbar {
-    background: white;
+    
     -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
-    
+    background-color: #ffffff;
+    position:  relative;
   }
 }
 
@@ -528,7 +529,7 @@ a:hover, a:focus, a:active {
     position: relative;
     width: 160px;
     height: 43px;
-    background: url(../img/logo.png) no-repeat left 100%;
+    background: url(images/logo2.png) no-repeat left 100%;
     background-size: cover;
   }
 }
