--- a/css/styleTyped.css
+++ b/css/styleTyped.css
@@ -3,5 +3,24 @@
 	top: 40%; 
 	width: 100%;
 	font-size: 400%;
-	
+}
+
+@media screen and (max-width: 768px) {
+  .type{
+   	position: absolute;
+	top: -100px; 
+	width: 100%;
+	font-size: 300%;
+
+   }
+}
+@media screen and (max-width: 480px) {
+ 	.type{
+		position: absolute;
+		top: -100px; 
+		width: 100%;
+		font-size: 200%;
+
+   
+   }
 }
