--- a/css/styleTyped.css
+++ b/css/styleTyped.css
@@ -17,7 +17,8 @@
 @media screen and (max-width: 480px) {
  	.type{
 		position: absolute;
-		top: -100px; 
+		top: -100px;
+		left: -10px; 
 		width: 100%;
 		font-size: 200%;
 
