--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ a:hover, a:focus, a:active {
     
     -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    background-color: red;
     position:  relative;
   }
 }
