--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ a:hover, a:focus, a:active {
     
     -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
-    background-color: red;
+    background-color: #ffffff;
     position:  relative;
   }
 }
@@ -1053,8 +1053,8 @@ a:hover, a:focus, a:active {
 }
 
 .probootstrap-section.probootstrap-section-colored {
-  background-color:  #F5F5DC;
-  background-size: 100%;
+  background-color: blue;
+  background-size: 20%;
   background-attachment: fixed;
   
   
