--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,12 @@ html {
 }
 
 body {
-  background:   #F5F5F5;
+  background:gray;
   color: #8b8e94;
   line-height: 28px;
   font-size: 15px;
   font-family: "Raleway", Arial, sans-serif;
+  
 
 }
 
@@ -264,6 +265,7 @@ a:hover, a:focus, a:active {
   left: 0;
   right: 0;
   
+  
   /*height: 80px;
   position: absolute;
   top: 0;
@@ -277,12 +279,13 @@ a:hover, a:focus, a:active {
 @media screen and (max-width: 768px) {
   .probootstrap-navbar {
     
+   background: white;
     -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
-    position:  relative;
+    position: relative;
   }
 }
+
 
 .probootstrap-navbar .btn-more {
   position: absolute;
@@ -355,8 +358,8 @@ a:hover, a:focus, a:active {
   padding-right: 0;
   margin-left: 15px;
   margin-right: 15px;
-  color: #49d192 !important;
-
+  color: red ;
+  font-weight: 700!important;
 }
 
 @media screen and (max-width: 768px) {
