--- a/css/style.css
+++ b/css/style.css
@@ -1092,7 +1092,8 @@ a:hover, a:focus, a:active {
 
 .section-heading h1 {
   color: red;
-  font-family: Papyrus, fantasy; font-size: 60px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: Papyrus, fantasy; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: Papyrus, fantasy; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: Papyrus, fantasy; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: Papyrus, fantasy; font-size: 60px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px !important;
+  font-family: 'Times New Roman', Times, serif; 
+    font-style: italic !important;
 }
 
 @media screen and (max-width: 768px) {
