--- a/News/css/style.css
+++ b/News/css/style.css
@@ -36,6 +36,10 @@ body {
 	color:#2C2C2C;
 	font-size:15px;
 	font-weight:300;
+	background-image: url(../../images/comp.jpg)!important;
+  	background-repeat: no-repeat!important;
+  	background-attachment: fixed!important;
+  	background-size: cover!important;
 
 }
 
