--- a/contact/css/main.css
+++ b/contact/css/main.css
@@ -43,6 +43,10 @@
 body, html {
 	height: 100%;
 	font-family: Poppins-Regular, sans-serif;
+  background-image: url(../../images/comp.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 
 }
 
