--- a/css/style.css
+++ b/css/style.css
@@ -1823,6 +1823,7 @@ a:hover, a:focus, a:active {
   -webkit-box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
   margin-bottom: 40px;
+  background-color: #F5F5F5;
 }
 
 .probootstrap-service-2 .image {
@@ -3188,4 +3189,31 @@ mfp-with-zoom .mfp-container,
     float: none;
     width: 100%;
   }
+}
+
+
+
+/* NEW ADDED CSS CODES (CUSTOM) */
+
+.main h1{
+  margin-top: 8%;
+  text-align: center;
+  color: #fff;
+} 
+.right{
+  float: right;
+  margin: 0 8% 0 0 ;
+}
+.left{
+  margin: 0 0 0 8% ;
+}
+.left,.right, a{
+  text-decoration: none;
+  color: white;
+  font-size: 110%;
+}
+.left,.right, a:hover{
+  text-decoration: none;
+  color: #008B8B;
+  transition: 200ms ease;
 }
