--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", Arial, sans-serif;
   font-weight: 300;
   margin: 0 0 30px 0;
+  font-weight: bold;
+  font-family:  "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
+
 }
 
 h1 {
