--- a/css/styleTyped.css
+++ b/css/styleTyped.css
@@ -3,6 +3,8 @@
 	top: 40%; 
 	width: 100%;
 	font-size: 400%;
+	font-family: "Raleway", Arial, sans-serif;
+  	font-weight: 300;
 }
 
 @media screen and (max-width: 768px) {
