--- a/css/style.css
+++ b/css/style.css
@@ -3230,6 +3230,27 @@ mfp-with-zoom .mfp-container,
   transition: 200ms ease;
 }
 
+@media screen and (max-width: 768px) {
+  .left, .right {
+    font-size: 70%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .left, .right {
+    font-size: 70%;
+  }
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
