--- a/css/style.css
+++ b/css/style.css
@@ -537,12 +537,16 @@ a:hover, a:focus, a:active {
     top: -10px !important;
     background-position: left 100%;
     background-size: 50%;
+  	background-image:url("../images/logo1.png");
+  background-repeat: no-repeat;
   }
 }
 
 @media screen and (max-width: 480px) {
   .probootstrap-navbar .navbar-brand {
     top: -15px !important;   
+    background-image:url("../images/logo1.png");
+  background-repeat: no-repeat;
   }
 }
 
@@ -3247,9 +3251,6 @@ mfp-with-zoom .mfp-container,
   transition: 200ms ease;
 }
 
-
-
-
 @media screen and (max-width: 768px) {
   .left, .right {
     font-size: 70%;
@@ -3271,36 +3272,20 @@ mfp-with-zoom .mfp-container,
   font-size: 20px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 .teachers-info {
- 
-  background-color:#008B8B;
+   background-color:#008B8B;
   border-radius: 10px;
   color: white !important;
    padding: 7px 0px;
-  
 }
-
 .teachers-info a{
   color: white !important;
   text-indent: none;
- 
- 
 }
 
-
+.laboratory{
+	padding-bottom: 3%;
+}
 
 .laboratory h1{
   color: white;
@@ -3310,20 +3295,18 @@ mfp-with-zoom .mfp-container,
 }
 
 .labs-content{
-  background-color: #008B8B;
-  margin-top: 5%;
+  margin-top: 1%;
 }
 .labs-content img{
   width: 30%;
   float: left;
+  margin-right: 2%;	
 }
 
 .labs-content p{
   float: right;
-  margin-left: 5%;
   color: white;
 }
-
 
 .labs-content h5{
   color: white;
